Implementado Header, Footer y saludo inicial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
         "COLORES",
-        "PALETA"
+        "logotipo",
+        "PALETA",
+        "Wahandri"
     ],
     "cSpell.ignoreWords": [
+        "Desarrollado",
         "García"
     ]
 }
