--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.6",
+    "swiper": "^12.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
